[project]
name = "not-my-ex"
version = "0.0.5"
description = "Tiny CLI to post simultaneously to Mastodon and Bluesky"
authors = ["Eduardo Cuducos <4732915+cuducos@users.noreply.github.com>"]
license = "GPL-3"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "eld>=1.0.6",
    "httpx>=0.27.2",
    "pytz>=2024.1",
    "typer>=0.12.5",
]

[project.scripts]
"not-my-ex" = "not_my_ex.__main__:cli"

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format --mypy"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest-asyncio>=0.24.0",
    "pytest-mypy>=0.10.3",
    "pytest-ruff>=0.4.1",
    "pytest>=8.3.2",
    "types-aiofiles>=24.1.0.20240626",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-pytz>=2024.1.0.20240417",
]
