[project]
name = "not-my-ex"
version = "0.0.7"
description = "Tiny CLI to post simultaneously to Mastodon and Bluesky"
authors = [{name = "Eduardo Cuducos", email = "4732915+cuducos@users.noreply.github.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=24.1.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "eld>=1.0.6",
    "httpx>=0.27.2",
    "pytz>=2024.1",
    "typer>=0.12.5",
]

[project.urls]
Repository = "https://github.com/cuducos/not-my-ex"

[project.scripts]
"not-my-ex" = "not_my_ex.__main__:cli"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest-asyncio>=0.24.0",
    "pytest-mypy>=0.10.3",
    "pytest-ruff>=0.4.1",
    "pytest>=8.3.2",
    "types-aiofiles>=24.1.0.20240626",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-pytz>=2024.1.0.20240417",
]

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format --mypy"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
