[project]
name = "not-my-ex"
version = "1.1.1"
description = "Tiny CLI to post simultaneously to Mastodon and Bluesky"
authors = [{name = "Eduardo Cuducos", email = "4732915+cuducos@users.noreply.github.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiofiles>=24.1.0",
    "appdirs>=1.4.4",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.3",
    "cryptography>=43.0.1",
    "eld>=1.0.6",
    "httpx>=0.27.2",
    "typer>=0.12.5",
]

Repository = "https://github.com/cuducos/not-my-ex"

[project.scripts]
"not-my-ex" = "not_my_ex.__main__:cli"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest-asyncio>=0.24.0",
    "pytest-mypy>=0.10.3",
    "pytest-ruff>=0.4.1",
    "types-aiofiles>=24.1.0.20240626",
    "types-appdirs>=1.4.3.5",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-wxpython>=0.9.7",
]

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format --mypy --pdbcls=IPython.terminal.debugger:Pdb"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
